--- a/udata_tabular_preview/templates/tabular/preview.html
+++ b/udata_tabular_preview/templates/tabular/preview.html
@@ -1,20 +1,27 @@
 <!DOCTYPE html>
-<html lang="en">
-{% set static_root = url_for('tabular.static', filename='') %}
+<html>
+{% set static_root = url_for('tabular.static', filename=config.TABULAR_UI) %}
 <head>
+    <title>DataExplorer</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1,shrink-to-fit=no">
-    <meta name="theme-color" content="#000000">
-    <link rel="manifest" href="./manifest.json">
-    <link rel="shortcut icon" href="./favicon.ico">
-    <title>DataExplorer</title>
-    <meta name="csvapi-url" content="{{ config.TABULAR_PREVIEW_SERVER_URL }}" />
-    <link href="{{ url_for('tabular.static', filename='dataexplorer') }}/{{ manifest('dataexplorer', 'main.css') }}" rel="stylesheet">
+    <meta name="csvapi-url" content="{{ config.TABULAR_CSVAPI_URL }}" />
+    {% if config.TABULAR_UI == 'dataexplorer' %}
+    <link href="{{ static_root }}/{{ manifest('dataexplorer', 'main.css') }}" rel="stylesheet">
+    {% else %}
+    <link href="{{ static_root }}/{{ manifest('csvapi-front', 'chunk-vendors.css') }}" rel="stylesheet">
+    <link href="{{ static_root }}/{{ manifest('csvapi-front', 'app.css') }}" rel="stylesheet">
+    {% endif %}
 </head>
 
 <body><noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="app"></div>
-    <script type="text/javascript" src="{{ url_for('tabular.static', filename='dataexplorer') }}/{{ manifest('dataexplorer', 'main.js') }}"></script>
+    {% if config.TABULAR_UI == 'dataexplorer' %}
+    <script type="text/javascript" src="{{ static_root }}/{{ manifest('dataexplorer', 'main.js') }}"></script>
+    {% else %}
+    <script type="text/javascript" src="{{ static_root }}/{{ manifest('csvapi-front', 'chunk-vendors.js') }}"></script>
+    <script type="text/javascript" src="{{ static_root }}/{{ manifest('csvapi-front', 'app.js') }}"></script>
+    {% endif %}
 </body>
 
 </html>
