Expose page size configuration

--- a/udata_tabular_preview/templates/tabular/preview.html
+++ b/udata_tabular_preview/templates/tabular/preview.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1,shrink-to-fit=no">
     <meta name="csvapi-url" content="{{ config.TABULAR_CSVAPI_URL }}" />
+    <meta name="page-size" content="{{ config.TABULAR_PAGE_SIZE }}" />
     {% if config.TABULAR_UI == 'dataexplorer' %}
     <link href="{{ tabular_manifest('dataexplorer', 'main.css') }}" rel="stylesheet" >
     <link href="{{ tabular_manifest('dataexplorer', 'main.css') }}" rel="stylesheet"-->
