feat: :necktie: update metadata name

--- a/udata_tabular_preview/templates/metadata.html
+++ b/udata_tabular_preview/templates/metadata.html
@@ -1,2 +1,2 @@
 <meta name="tabular-csvapi-url" content="{{ config.TABULAR_CSVAPI_URL }}" />
-<meta name="explorable-resource" content="{{ resources|tojson|urlencode }}" />
+<meta name="explorable-resources" content="{{ resources|tojson|urlencode }}" />
