--- a/udata_tabular_preview/templates/script.html
+++ b/udata_tabular_preview/templates/script.html
@@ -1,3 +1,3 @@
-<script type="module" src="{{ tabular_static('udata-tabular-preview', 'index.js') }}"></script>
+<script type="module-shim" src="{{ tabular_static('udata-tabular-preview', 'index.js') }}"></script>
 <script type="text/javascript" nomodule src="{{ tabular_static('udata-tabular-preview', 'polyfills-legacy.js') }}"></script>
 <script type="text/javascript" nomodule src="{{ tabular_static('udata-tabular-preview', 'index-legacy.js') }}"></script>
