--- a/udata_tabular_preview/templates/metadata.html
+++ b/udata_tabular_preview/templates/metadata.html
@@ -1,3 +1,3 @@
-<meta name="tabular-csvapi-url" content="{{ config.TABULAR_CSVAPI_URL }}" />
+<meta name="tabular-api-url" content="{{ config.TABULAR_API_URL }}" />
 <meta name="tabular-page-size" content="{{ config.TABULAR_PAGE_SIZE }}" />
 <meta name="explorable-resources" content="{{ resources|tojson|urlencode }}" />
